Fixed the word alignment in the navbar

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4299,7 +4299,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   float: right;
   padding: 9px 10px;
-  margin-top: 18px;
+  margin-top: 6px;
   margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
